syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ProjetoPixGrpc";

package br.com.zup;
import "google/protobuf/timestamp.proto";

service PixRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service PixDeletaGrpcService {
  rpc deleta(DeletaChavePixRequest) returns (DeletaChavePixResponse) {}
}

/*
*! Registra Chave Pix:
*/
enum ChaveEnum {
  TIPO_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum ContaEnum {
  TIPO_CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  ChaveEnum tipoChave = 2;
  string chave = 3;
  ContaEnum tipoConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

/*
*! Deleta Chave Pix:
*/
message DeletaChavePixRequest {
  string pixId = 1;
  string clientId = 2;
}

message DeletaChavePixResponse {
  string pixId = 1;
  string clientId = 2;
}
